# ZiuQAI

./: Readme.md
ZiuQAI/: opencollection.yml
backend/: .dockerignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: app.py
backend/app/ai/: chromadb.py  graph.py  llm.py  loaders.py  prompts.py  retriever.py  splitters.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py
backend/app/models/: chat_threads.py  documents.py  participants.py  questions.py  quiz_sessions.py  quizes.py  user_responses.py  users.py
backend/app/routers/: agent.py  auth.py  participants.py  questions.py  quiz_sessions.py  quizes.py  user_responses.py
backend/app/schemas/: auth.py  participants.py  questions.py  quiz_sessions.py  quizes.py  user_responses.py
backend/app/utils/: auth_handler.py  auth_middleware.py
backend/chroma_langchain_db/: chroma.sqlite3
backend/docker/: Dockerfile  docker-compose.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/Arena/: Navigation.jsx  Question.jsx
frontend/src/components/Auth/: AuthForm.jsx  Others.jsx
frontend/src/components/Dashboard/: ActivityChip.jsx  DifficultyCapsule.jsx  GeneralChip.jsx  RouteChip.jsx
frontend/src/components/Footer/: Footer.jsx  FooterLink.jsx  (+1 more)
frontend/src/context/: AuthProvider.jsx  ThemeProvider.jsx
frontend/src/pages/: Arena.jsx  Authenticate.jsx  Dashboard.jsx  GenerateQuiz.jsx  Home.jsx  Profile.jsx  Standings.jsx
frontend/src/utils/: ProtectedRoute.jsx  api.js
(+11 files in other folders)
