[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.128.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "python-jose[cryptography]>=3.5.0",
    "databases>=0.9.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-decouple>=3.8",
    "python-multipart>=0.0.21",
    "bcrypt==4.3.0",
    "asyncpg>=0.31.0",
    "langgraph>=1.0.7",
    "langchain>=1.2.7",
    "langchain-text-splitters>=1.1.0",
    "langchain-community>=0.4.1",
    "bs4>=0.0.2",
]
